updates na primeira aula

--- a/index.html
+++ b/index.html
@@ -5,5 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curso Javascript</title>
   </head>
-  <body></body>
+  <body>
+    <script>
+      const nome = 'Diego'
+      const idade = 23
+      const peso = 80.5
+      const humano = true
+      const alunos = ['Diego', 'Gabriel', 'Lucas']
+      const aluno = {
+        nome: 'Diego',
+        idade: 23,
+        peso: 80.5,
+        humano: true
+      }
+    </script>
+  </body>
 </html>
