--- a/modulo2/desafio.html
+++ b/modulo2/desafio.html
@@ -18,7 +18,7 @@
       quadrado.style.backgroundColor = 'red'
       quadrado.style.width = '100px'
       quadrado.style.height = '100px'
-      quadrado.onmouseenter = () => {
+      quadrado.onmouseover = () => {
         quadrado.style.backgroundColor = gerarCorAleatoria()
       }
       app.appendChild(quadrado)
