listing items with javascritp

--- a/todos/index.html
+++ b/todos/index.html
@@ -4,53 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curso Javascript</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        background-color: black;
-      }
-      #app {
-        margin: 2vh 2vw;
-        color: white;
-        font-family: monospace;
-        box-shadow: 1px 1px 20px #ccc;
-      }
-      .listaDeTodos {
-        height: 80vh;
-        list-style: lower-greek;
-        display: flex;
-        padding: 3vh 3vw;
-        flex-direction: column;
-        box-sizing: border-box;
-      }
-      .listaDeTodos ul {
-        margin: 2vh;
-      }
-      .listaDeTodos a {
-        text-decoration: none;
-        color: white;
-        border: 1px solid white;
-        border-radius: 50%;
-        padding: 5px;
-        display: inline-block;
-      }
-      .listaDeTodos a:hover {
-        background-color: white;
-        color: black;
-      }
-    </style>
+    <style></style>
   </head>
   <body>
     <div id="app">
-      <ul class="listaDeTodos">
-        <li>Fazer café <a href="#">Excluir</a></li>
-      </ul>
+      <ul></ul>
       <input type="text" placeholder="Digite um todo" />
       <button>Adicionar</button>
     </div>
-    <script></script>
+    <script src="todos.js"></script>
   </body>
 </html>
